Fixed the wrong slide order on smaller displays: used fixed flex order

--- a/styles/main.css
+++ b/styles/main.css
@@ -271,6 +271,13 @@ a {
   .slide4 {
     flex-direction: column;
   }
+  .slide1 .bluebobtext {
+    order: 1;
+  }
+
+  .slide3 .bluebobtext {
+    order: 1;
+  }
 }
 
 /* slide transitions */
